--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,7 +3,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Web App</title>
 
         <h:outputStylesheet name="bootstrap-4.1.1/css/bootstrap.min.css" library="static" ></h:outputStylesheet>
     </h:head>
